# trader-deprecated-3

./: Cargo.toml  README.md  up.psql
src/: environment.rs  error.rs  main.rs  trader.rs  wallet.rs
src/backends/: mod.rs  simulated.rs
src/environment/: candlestick.rs  mod.rs  order.rs  trader.rs
src/environment/indicators/: bollinger_bands.rs  mean_variance.rs  mod.rs
src/indicators/: atr.rs  bollinger_bands.rs  current.rs  ema.rs  macd.rs  mean_variance.rs  mma.rs  mod.rs  obv.rs  rsi.rs  timestamp.rs  tr.rs
src/indicators/series/: ema.rs  fft.rs  macd.rs  mean_variance.rs  mma.rs  mod.rs  obv_macd.rs  value.rs
src/loggers/: log.rs  mod.rs  web copy.rs  web.rs  websocket.rs
src/managers/: mod.rs  simulated.rs
src/model/: action.rs  asset.rs  candlestick.rs  interval.rs  market.rs  mod.rs  order.rs  quantity.rs  trade.rs  update.rs  value.rs  valued_quantity.rs
src/strategies/: custom.rs  mod.rs
src/traders/: bollinger.rs  custom.rs  mod.rs
web/: index.html  script.js  style.css
web copy/: index.html
