[package]
name = "trader"
version = "0.1.0"
authors = ["fabianboesiger <boesiger.fabian@outlook.com>"]
edition = "2018"

[dependencies]
tokio = "0.2"
futures = "0.3"
rust_decimal = "1.8"
num-traits = "0.2"
async-trait = "0.1"
warp = "0.2"
chrono = { version = "0.4", features = ["serde"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
dotenv = "0.15"
sqlx = { git = "https://github.com/launchbadge/sqlx", default-features = false, features = ["runtime-tokio", "postgres", "decimal", "chrono", "macros"] }
openlimits = { git = "https://github.com/nash-io/openlimits" }
stft = { git = "https://github.com/snd/stft" }